Java/compiling_error.txt
/Users/utkarshsingh/Desktop/Coding/Java/nqueen.cpp:12:1: error: unknown type name 'boolean'
boolean isSafe(int board[][],int row,int col){
^
/Users/utkarshsingh/Desktop/Coding/Java/nqueen.cpp:12:25: error: array has incomplete element type 'int []'
boolean isSafe(int board[][],int row,int col){
                        ^
/Users/utkarshsingh/Desktop/Coding/Java/nqueen.cpp:18:20: warning: using the result of an assignment as a condition without parentheses [-Wparentheses]
    for(int i=row;j=col;i>=0;j>=0;i--;j--){
                  ~^~~~
/Users/utkarshsingh/Desktop/Coding/Java/nqueen.cpp:18:20: note: place parentheses around the assignment to silence this warning
    for(int i=row;j=col;i>=0;j>=0;i--;j--){
                   ^
                  (    )
/Users/utkarshsingh/Desktop/Coding/Java/nqueen.cpp:18:20: note: use '==' to turn this assignment into an equality comparison
    for(int i=row;j=col;i>=0;j>=0;i--;j--){
                   ^
                   ==
/Users/utkarshsingh/Desktop/Coding/Java/nqueen.cpp:18:29: error: expected ')'
    for(int i=row;j=col;i>=0;j>=0;i--;j--){
                            ^
/Users/utkarshsingh/Desktop/Coding/Java/nqueen.cpp:18:8: note: to match this '('
    for(int i=row;j=col;i>=0;j>=0;i--;j--){
       ^
/Users/utkarshsingh/Desktop/Coding/Java/nqueen.cpp:18:26: warning: relational comparison result unused [-Wunused-comparison]
    for(int i=row;j=col;i>=0;j>=0;i--;j--){
                        ~^~~
/Users/utkarshsingh/Desktop/Coding/Java/nqueen.cpp:18:42: error: expected ';' after expression
    for(int i=row;j=col;i>=0;j>=0;i--;j--){
                                         ^
                                         ;
/Users/utkarshsingh/Desktop/Coding/Java/nqueen.cpp:18:42: error: expected expression
/Users/utkarshsingh/Desktop/Coding/Java/nqueen.cpp:18:31: warning: relational comparison result unused [-Wunused-comparison]
    for(int i=row;j=col;i>=0;j>=0;i--;j--){
                             ~^~~
/Users/utkarshsingh/Desktop/Coding/Java/nqueen.cpp:28:1: error: unknown type name 'boolean'
boolean solveNQUtil(int board[N][N],int col){
^
3 warnings and 6 errors generated.
